ex5/testdata/typechecker/error/SameNameAsMainClass.java
class Wuff {
    public static void main(String[] args) {
    }
}

class Wuff {

}